Bug 1962205 - Move locators insted of running two geolocation services at a time. r=saschanaz

Differential Revision: https://phabricator.services.mozilla.com/D246564